--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "codex-ai",
   "version": "1.0.0",
   "description": "A CodeGPT app",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
